--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg"
     tools:context="com.cs330.MainActivity">
 
     <TextView
@@ -18,6 +19,7 @@
         android:id="@+id/status_message"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:textColor="#FFFFFF"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -29,6 +31,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="110dp"
+        android:textColor="#FFFFFF"
         android:layout_alignRight="@+id/status_message"
         android:layout_alignEnd="@+id/status_message" />
 
@@ -48,6 +51,8 @@
         android:layout_below="@+id/barcode_value"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:textColor="#FFFFFF"
+        android:buttonTint="#FFFFFF"
         android:layout_marginTop="66dp"
         android:checked="false" />
 
@@ -56,6 +61,8 @@
         android:layout_height="wrap_content"
         android:text="@string/use_flash"
         android:id="@+id/use_flash"
+        android:textColor="#FFFFFF"
+        android:buttonTint="#FFFFFF"
         android:layout_alignTop="@+id/auto_focus"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
